# synthetic_image_generator

./: CMakeLists.txt
src/: affine_trafo.cpp  handy_linienextraktor.cpp  image_generator.cpp  synthetic_image_generator.cpp
